// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests fee is off #increaseObservationCardinalityNext grow by 1 slot 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 51502,
}
`;

exports[`PoolManager gas tests fee is off #increaseObservationCardinalityNext no op 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 26433,
}
`;

exports[`PoolManager gas tests fee is off #mint above current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187226,
}
`;

exports[`PoolManager gas tests fee is off #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187226,
}
`;

exports[`PoolManager gas tests fee is off #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 282200,
}
`;

exports[`PoolManager gas tests fee is off #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187226,
}
`;

exports[`PoolManager gas tests fee is off #mint around current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 261863,
}
`;

exports[`PoolManager gas tests fee is off #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254568,
}
`;

exports[`PoolManager gas tests fee is off #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 406784,
}
`;

exports[`PoolManager gas tests fee is off #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254568,
}
`;

exports[`PoolManager gas tests fee is off #mint below current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187903,
}
`;

exports[`PoolManager gas tests fee is off #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187903,
}
`;

exports[`PoolManager gas tests fee is off #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 347730,
}
`;

exports[`PoolManager gas tests fee is off #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187903,
}
`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick above 1`] = `34874`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick below 1`] = `34833`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick inside 1`] = `40113`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 237683,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 224888,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 261880,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 316924,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 249731,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 large swap crossing several initialized ticks after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 316924,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 large swap crossing several initialized ticks second time after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 316924,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 237683,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 224976,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 251016,
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 306035,
}
`;

exports[`PoolManager gas tests fee is on #increaseObservationCardinalityNext grow by 1 slot 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 51502,
}
`;

exports[`PoolManager gas tests fee is on #increaseObservationCardinalityNext no op 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 26433,
}
`;

exports[`PoolManager gas tests fee is on #mint above current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187226,
}
`;

exports[`PoolManager gas tests fee is on #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187226,
}
`;

exports[`PoolManager gas tests fee is on #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 282200,
}
`;

exports[`PoolManager gas tests fee is on #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187226,
}
`;

exports[`PoolManager gas tests fee is on #mint around current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 261863,
}
`;

exports[`PoolManager gas tests fee is on #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254568,
}
`;

exports[`PoolManager gas tests fee is on #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 406784,
}
`;

exports[`PoolManager gas tests fee is on #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254568,
}
`;

exports[`PoolManager gas tests fee is on #mint below current price add to position after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187903,
}
`;

exports[`PoolManager gas tests fee is on #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187903,
}
`;

exports[`PoolManager gas tests fee is on #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 347730,
}
`;

exports[`PoolManager gas tests fee is on #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 187903,
}
`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick above 1`] = `34874`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick below 1`] = `34833`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick inside 1`] = `40113`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 241988,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 229075,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 266302,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 321700,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 254271,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 large swap crossing several initialized ticks after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 321700,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 large swap crossing several initialized ticks second time after some time passes 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 321700,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 241988,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 229164,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 255321,
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 310692,
}
`;
